# openmate

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
designs/: 01-domain-model-and-kernel.md  02-agent-loop-and-runtime.md  03-model-port-and-providers.md  04-tools-and-mcp.md  05-planning-and-reasoning.md  08-multi-agent-orchestration.md  09-context-engineering.md  10-safety-and-guardrails.md  11-observability-and-evaluation.md  12-production-and-reliability.md  13-framework-interoperability.md  README.md  architecture.md
docs/: 01-domain-model-and-kernel.md  02-agent-loop-and-runtime.md  04-tools-and-mcp.md  06-memory-and-state.md  07-retrieval-rag.md  08-multi-agent-orchestration.md  10-safety-and-guardrails.md  11-observability-and-evaluation.md  12-production-and-reliability.md  13-framework-interoperability.md  14-skills.md  15-claude-code-tool-architecture-alignment.md  16-eval-plan.md  17-eval-report.md  18-rag-ui.md  19-workspace.md  README.md  jupyter-magics.md
evals/: README.md  conftest.py  metrics.py  run_manual.py  test_evals_integration.py  test_live.py  test_reasoning_plan.py  test_reasoning_react.py
examples/: custom_tool.py  email_assistant.py  email_assistant_live.py  live_smoke.py  minimal_react.py  offline_fake.py  rag_demo.py
examples/notebooks/: openmate_demo.ipynb
openmate/: __init__.py  __main__.py  cli.py  config.py  jupyter_magic.py
openmate/adapters/models/: anthropic.py  (+1 more)
openmate/agent/: __init__.py  assemble.py
openmate/kernel/: agent.py  codec.py  errors.py  events.py  executor.py  loop.py  runtime.py  types.py
openmate/ports/: model.py  planner.py  retriever.py  store.py  tool.py  tracer.py
openmate/skills/: __init__.py  skill.py
openmate/strategies/: __init__.py  planning_tools.py  tot.py
openmate/tools/: __init__.py  provider.py
rag/: README.md  __init__.py  chunking.py  cli.py  embedders.py  factory.py  generate.py  loaders.py  mcp_server.py  pipeline.py  retrievers.py  stores.py  tools.py
servers/gmail/: README.md  fake_server.py  requirements.txt  server.py
tests/: conftest.py  helpers.py  test_anthropic_adapter.py  test_builtin_tools.py  test_evals.py  test_kernel.py  test_libraries.py  test_live.py  test_logging.py  test_loop.py  test_mcp.py  test_projects.py  test_providers.py  test_rag.py  test_reasoning_plan.py  test_reasoning_react.py  test_reasoning_tot.py  test_runtime.py  test_skills.py  test_streaming.py  test_tools.py
ui/: README.md  server.py
ui/static/: app.js  index.html  style.css
(+10 files in other folders)
