[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmate"
version = "0.1.0"
description = "A from-scratch, provider-agnostic AI agent (MVP), running on MiniMax via the Anthropic-compatible API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alan" }]
dependencies = [
    "anthropic>=0.39",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# MCP client/server support (the Gmail integration). Optional: the core agent
# runs without it; importing an MCP server without this raises a clear error.
mcp = [
    "mcp>=1.2",
]
# The real Gmail MCP server (servers/gmail/server.py). The offline fake server
# needs only the `mcp` extra.
gmail = [
    "mcp>=1.2",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
# RAG (rag/). Chroma is the default vector store; the in-memory store and the
# HashingEmbedder need no extras, so the pipeline + tests run without this.
rag = [
    "chromadb>=0.5",
]
# RAG UI — the JupyterLab surface over RAG + MCP (openmate/jupyter_magic.py
# and examples/notebooks/openmate_demo.ipynb). Pulls in the kernel so you can
# register the venv with `python -m ipykernel install --user --name=openmate`.
rag-ui = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[project.scripts]
openmate = "openmate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openmate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# tests/ is 100% offline — a bare `pytest` runs these. The live tier lives under
# evals/ with its own conftest; invoke it explicitly, e.g. `pytest evals/ --run-live`.
testpaths = ["tests"]
